--- a/app/views/bravura_template_prime/shared/_head.html.erb
+++ b/app/views/bravura_template_prime/shared/_head.html.erb
@@ -38,7 +38,12 @@ set_meta_tags(
     locale: @presenter.get('general.open_graph_locale')
   },
   twitter: {
-    card: "summary_large_image"
+    card: "summary_large_image",
+    site: @presenter.get("general.publication_name"),
+    title: @presenter.get("general.meta_title"),
+    description: @presenter.get("general.meta_description"),
+    description: @presenter.get("general.meta_description"),
+    image: @presenter.image_path("general.social_cover")
   },
   canonical: request.base_url,
   robots: "index,follow"
